force-app/main/default/objects/Movimentacao__c/Movimentacao__c.object-meta.xml
<CustomObject>
    <label>Movimentação</label>
    <nameField>
        <displayFormat>MV-{0000000}</displayFormat>
        <label>Movimentação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movimentações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>