force-app/main/default/objects/Movimentacao__c/fields/Canal2__c.field-meta.xml
<CustomField>
    <fullName>Canal2__c</fullName>
    <description>Canal onde o plano foi vendido para o cliente</description>
    <label>Lista de Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADMINISTRADORAS</fullName>
            </value>
            <value>
                <fullName>CALL CENTER</fullName>
            </value>
            <value>
                <fullName>E-COMMERCE</fullName>
            </value>
            <value>
                <fullName>EQUIPE CORPORATIVA</fullName>
            </value>
            <value>
                <fullName>GVEN - CONSULTORES</fullName>
            </value>
            <value>
                <fullName>LOJAS AUTORIZADAS</fullName>
            </value>
            <value>
                <fullName>LOJAS PRÓPRIAS</fullName>
            </value>
            <value>
                <fullName>SINDILOJAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>