force-app/main/default/objects/Movimentacao__c/fields/CanalComercializador__c.field-meta.xml
<CustomField>
    <fullName>CanalComercializador__c</fullName>
    <label>Nome canal comercializador Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>