force-app/main/default/objects/Movimentacao__c/fields/Carga__c.field-meta.xml
<CustomField>
    <fullName>Carga__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informa se o registro foi inserido por meio de um processo de importação de dados.</description>
    <label>Carga</label>
    <type>Checkbox</type>
</CustomField>