force-app/main/default/objects/Movimentacao__c/fields/CodigoGrupoContratante__c.field-meta.xml
<CustomField>
    <fullName>CodigoGrupoContratante__c</fullName>
    <label>Codigo Grupo Contratante</label>
    <length>30</length>
    <type>Text</type>
</CustomField>