force-app/main/default/objects/Movimentacao__c/fields/CodigoInclusao__c.field-meta.xml
<CustomField>
    <fullName>CodigoInclusao__c</fullName>
    <label>Código motivo inclusão</label>
    <length>100</length>
    <type>Text</type>
</CustomField>