force-app/main/default/objects/Movimentacao__c/fields/Competencia__c.field-meta.xml
<CustomField>
    <fullName>Competencia__c</fullName>
    <label>Competencia</label>
    <type>Date</type>
</CustomField>