force-app/main/default/objects/Movimentacao__c/fields/CPFCNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPFCNPJ__c</fullName>
    <label>CPFCNPJ</label>
    <length>14</length>
    <type>Text</type>
</CustomField>