force-app/main/default/objects/Movimentacao__c/fields/CPFTitular__c.field-meta.xml
<CustomField>
    <fullName>CPFTitular__c</fullName>
    <description>Campo que especifica o CPF do titular em um dependente</description>
    <label>CPF do titular</label>
    <length>11</length>
    <type>Text</type>
</CustomField>