force-app/main/default/objects/Movimentacao__c/fields/DataExclusao__c.field-meta.xml
<CustomField>
    <fullName>DataExclusao__c</fullName>
    <label>Data exclusão</label>
    <type>Date</type>
</CustomField>