force-app/main/default/objects/Movimentacao__c/fields/DataInclusao__c.field-meta.xml
<CustomField>
    <fullName>DataInclusao__c</fullName>
    <label>Data inclusão</label>
    <type>Date</type>
</CustomField>