force-app/main/default/objects/Movimentacao__c/fields/DataVigencia__c.field-meta.xml
<CustomField>
    <fullName>DataVigencia__c</fullName>
    <label>Data Início Vigência Módulo</label>
    <type>Date</type>
</CustomField>