force-app/main/default/objects/Movimentacao__c/fields/GrupoContratante__c.field-meta.xml
<CustomField>
    <fullName>GrupoContratante__c</fullName>
    <label>Descrição Grupo Contratante</label>
    <length>100</length>
    <type>Text</type>
</CustomField>