force-app/main/default/objects/Movimentacao__c/fields/IDMetaGerente__c.field-meta.xml
<CustomField>
    <fullName>IDMetaGerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Busca a informação da meta do gerente no objeto meta__c, a meta é compatível com a competência. Esta meta não é a desafio.</description>
    <label>Id da Meta do Gerente</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Movimentações (Id da Meta do Gerente)</relationshipLabel>
    <relationshipName>Movimenta_es1</relationshipName>
    <type>Lookup</type>
</CustomField>