force-app/main/default/objects/Movimentacao__c/fields/IdMetaLoja__c.field-meta.xml
<CustomField>
    <fullName>IdMetaLoja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id das metas das lojas autorizadas e próprias. As lojas não tem meta desafio.</description>
    <label>Id Meta Loja</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Movimentações (Id Meta Loja)</relationshipLabel>
    <relationshipName>Movimenta_es6</relationshipName>
    <type>Lookup</type>
</CustomField>