force-app/main/default/objects/Movimentacao__c/fields/IDSupervisor__c.field-meta.xml
<CustomField>
    <fullName>IDSupervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID do Supervisor</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Movimentações (ID do Supervisor)</relationshipLabel>
    <relationshipName>Movimenta_es5</relationshipName>
    <type>Lookup</type>
</CustomField>