force-app/main/default/objects/Movimentacao__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento entre Movimentacao__c e Lead, sendo que um lead pode ter N movimentações.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Movimentações</relationshipLabel>
    <relationshipName>Movimentacao</relationshipName>
    <type>Lookup</type>
</CustomField>