force-app/main/default/objects/Movimentacao__c/fields/MesCompetencia__c.field-meta.xml
<CustomField>
    <fullName>MesCompetencia__c</fullName>
    <formula>Case(MONTH(Competencia__c),
					1,&apos;Janeiro&apos;, 
					2,&apos;Fevereiro&apos;,
					3,&apos;Março&apos;,
					4,&apos;Abril&apos;,
					5,&apos;Maio&apos;,
					6,&apos;Junho&apos;,
					7,&apos;Julho&apos;,
					8,&apos;Agosto&apos;,
					9,&apos;Setembro&apos;,
					10,&apos;Outubro&apos;,
					11,&apos;Novembro&apos;,
					12,&apos;Dezembro&apos;,
					null
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês da Competência</label>
    <type>Text</type>
</CustomField>