force-app/main/default/objects/Movimentacao__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meta</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Movimentações</relationshipLabel>
    <relationshipName>Movimenta_es</relationshipName>
    <type>Lookup</type>
</CustomField>