force-app/main/default/objects/Movimentacao__c/fields/NomeIndividuo__c.field-meta.xml
<CustomField>
    <fullName>NomeIndividuo__c</fullName>
    <label>Nome indivíduo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>