force-app/main/default/objects/Movimentacao__c/fields/NomePrestador__c.field-meta.xml
<CustomField>
    <fullName>NomePrestador__c</fullName>
    <label>Nome prestador módulo plano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>