force-app/main/default/objects/Movimentacao__c/fields/NomeVendedor__c.field-meta.xml
<CustomField>
    <fullName>NomeVendedor__c</fullName>
    <label>Nome vendedor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>