force-app/main/default/objects/Movimentacao__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <formula>IF(CONTAINS(TipoProduto__c, &apos;AERO&apos;), &apos;Aeromédico&apos;, 
			IF(CONTAINS(TipoProduto__c, &apos;ODONTO&apos;), &apos;Odontológico&apos;,
					IF( TipoProduto__c = &apos;SEGURO&apos; || CONTAINS(TipoProduto__c, &apos;PROTECAO FAMILIAR&apos;) , &apos;Proteção Familiar&apos;,
							&apos;Assistencial&apos;)
					)
		)</formula>
    <label>Produto</label>
    <type>Text</type>
</CustomField>