force-app/main/default/objects/Movimentacao__c/fields/QuantidadeExclusao__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeExclusao__c</fullName>
    <label>Quantidade exclusão</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>