force-app/main/default/objects/Movimentacao__c/fields/QuantidadeInclusao__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeInclusao__c</fullName>
    <label>Quantidade de Inclusão</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>