force-app/main/default/objects/Movimentacao__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <label>Saldo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>