force-app/main/default/objects/Movimentacao__c/fields/SaldoNovo__c.field-meta.xml
<CustomField>
    <fullName>SaldoNovo__c</fullName>
    <formula>Case(CodigoInclusao__c,
				&apos;NOVO&apos;,Saldo__c,
				&apos;TRANSF&apos;,0,
				&apos;MIGRAD&apos;,0,
				&apos;COD_MOTIVO_INCLUSAO&apos;,0,
					NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Novo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>