force-app/main/default/objects/Movimentacao__c/fields/SaldoTransferencia__c.field-meta.xml
<CustomField>
    <fullName>SaldoTransferencia__c</fullName>
    <formula>Case(CodigoInclusao__c,
				&apos;NOVO&apos;,0,
				&apos;TRANSF&apos;,Saldo__c,
				&apos;MIGRAD&apos;,Saldo__c,
				&apos;COD_MOTIVO_INCLUSAO&apos;,0,
					NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Transferência</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>