force-app/main/default/objects/Movimentacao__c/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <description>Define se o cliente é Titular ou Dependente</description>
    <label>Tipo de cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>