force-app/main/default/objects/Movimentacao__c/fields/TipoContratacao__c.field-meta.xml
<CustomField>
    <fullName>TipoContratacao__c</fullName>
    <label>Descrição Tipo Contratação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>