force-app/main/default/objects/Movimentacao__c/fields/TipoMovimentacao__c.field-meta.xml
<CustomField>
    <fullName>TipoMovimentacao__c</fullName>
    <description>Define se é assistencial ou opcional</description>
    <label>Tipo de Movimentação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASSISTENCIAL</fullName>
            </value>
            <value>
                <fullName>OPCIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>