force-app/main/default/objects/Movimentacao__c/fields/TipoProduto__c.field-meta.xml
<CustomField>
    <fullName>TipoProduto__c</fullName>
    <label>Descrição tipo produto Unimed-BH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>