force-app/main/default/objects/Movimentacao__c/fields/Visita__c.field-meta.xml
<CustomField>
    <fullName>Visita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visita</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Movimentações</relationshipLabel>
    <relationshipName>Movimenta_es</relationshipName>
    <type>Lookup</type>
</CustomField>