force-app/main/default/objects/Movimentacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Competencia__c</columns>
    <columns>QuantidadeInclusao__c</columns>
    <columns>QuantidadeExclusao__c</columns>
    <columns>Saldo__c</columns>
    <columns>TipoMovimentacao__c</columns>
    <columns>CodigoInclusao__c</columns>
    <columns>CPFCNPJ__c</columns>
    <columns>TipoContratacao__c</columns>
    <columns>TipoCliente__c</columns>
    <columns>TipoProduto__c</columns>
    <columns>Canal__c</columns>
    <columns>Loja__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodigoInclusao__c</field>
        <operation>equals</operation>
        <value>Novo</value>
    </filters>
    <filters>
        <field>Produto__c</field>
        <operation>equals</operation>
        <value>Odontológico</value>
    </filters>
    <filters>
        <field>Competencia__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </filters>
    <filters>
        <field>Competencia__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2021</value>
    </filters>
    <filters>
        <field>Canal__c</field>
        <operation>equals</operation>
        <value>EQUIPE CORPORATIVA</value>
    </filters>
    <filters>
        <field>Competencia__c</field>
        <operation>equals</operation>
        <value>3/1/2021</value>
    </filters>
    <label>Tudo</label>
</ListView>